--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //interceptor
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    //Timber
+    compile 'com.jakewharton.timber:timber:4.3.1'
+
     //Dagger-2
     compile 'com.google.dagger:dagger:2.4'
     annotationProcessor "com.google.dagger:dagger-compiler:2.4"
@@ -35,6 +40,8 @@ dependencies {
     //Gson
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+    //picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
     //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
