--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
+    // Retrofit
+
+    implementation "com.squareup.retrofit2:retrofit:2.1.0"
+
+
     //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
